update favicon and footer

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -175,3 +175,18 @@ a {
         }
     }
 }
+footer {
+    clear: both;
+    position: relative;
+    text-align: center;
+    bottom: 20px;
+    span {
+        margin-right: 3em;
+    }
+    a {
+        color: $primary-color;
+        &:hover {
+            color: $text-color;
+        }
+    }
+}
