fix: import dynamic common translate files

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 // index.scss
-@import "styles/base";
-@import "styles/margins";
-@import "styles/menu";
-@import "styles/sections";
-@import "styles/mobile";
+@import "base";
+@import "margins";
+@import "menu";
+@import "sections";
+@import "mobile";
 
 
 
